Bug 226381 - Copy/Paste of images in Albums view selects wrong image
Summary: Copy/Paste of images in Albums view selects wrong image
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Clipboard (other bugs)
Version First Reported In: 1.2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-11 21:06 UTC by Simon
Modified: 2022-01-31 04:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon 2010-02-11 21:06:09 UTC
Version:           1.2.0 (rev.: 1085904) (using 4.3.4 (KDE 4.3.4), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.32-7.slh.7-sidux-686

r 1085904

In the Album View: I tried to copy DSC_3333.JPG to a directory I've opened in dolphing by pressing Ctrl-C in digikam and Ctrl-V in dolphin.

What has actually been copied was DSC_3441.JPG.

DSC_3356.JPG -> PICT0092.JPG
DSC_3331.JPG -> DSC_3440.JPG

and so on ...
Comment 1 caulier.gilles 2010-02-11 21:11:54 UTC
I reproduce this problem today on my computer...

Gilles Caulier
Comment 2 Marcel Wiesweg 2010-02-13 14:57:24 UTC
SVN commit 1089598 by mwiesweg:

Use model's mimeData() which is forwarded through the proxy models to the source model.
The drag-drop handler expects indexes from the source model. We fed indexes from
the proxy model. The ImageModel does not crash there, but gives out the
images it has at the given position.

BUG: 226381

 M  +2 -1      NEWS  
 M  +2 -2      libs/widgets/common/dcategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1089598
Comment 3 Simon 2010-03-16 22:15:46 UTC
thank you!