Use model's mimeData() which is forwarded through the proxy models to the source model. The drag-drop handler expects indexes from the source model. We fed indexes from the proxy model. The ImageModel does not crash there, but gives out the images it has at the given position.

BUG: 226381

svn path=/trunk/extragear/graphics/digikam/; revision=1089598